--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 .hero {
     height: 600px;
-    background-color: #1F2937;
+    background-image: linear-gradient(to right, #000b1a, #263140);
     padding: 0 15%;
 }
 
@@ -62,7 +62,12 @@ a {
 
 .hero-img {
     flex: 1;
-    background-color: grey;
+    display: flex;
+}
+.hero-image {
+    flex: 1;
+    border-radius: 15px;
+    height: 300px;
 }
 
 .hero-context {
@@ -87,12 +92,13 @@ a {
     flex-direction: column;
     align-items: center;
     flex-shrink: 0;
+    background-color: #00122c;
 }
 
 .info-title {
     font-size: 38px;
     font-weight: 600;
-    color: black;
+    color: rgb(255, 215, 215);
     margin: 36px 0;
 }
 
@@ -114,14 +120,15 @@ a {
 }
 .info-content p {
     text-align: center;
-    color: #545151;
+    color: #ede3ff;
     font-size: 18px;
 }
 
 .quote {
     height: 400px;
-    background-color: rgb(210, 203, 203);
+    background-color: rgb(0, 0, 0);
     display: flex;
+    color: white;
 }
 .sizing {
     margin: 0 20%;
